2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageView.cs: Refactored status bar.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* WelcomePage.mdp, Makefile.am: Removed some unused glade and gnome-sharp
	  references (only the unused). But I'll continue to remove glade, we need
	  to lower the dependency tree a bit.

2008-02-14  Geoff Norton  <gnorton@novell.com>

	* WelcomePageView.cs: Ensure that we dont try to read more bytes
	than available from the stream.  Avoides a IndexOutOfRangeException
	on other runtimes.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageFallbackWidget.cs: Fixed translation bug.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Updated add-in category and description.

2008-01-11  Alexandre Miguel Pedro Gomes  <alexmipego@gmail.com>

	* WelcomePageView.cs: Check if WebException.Response is null before
	trying to use it.

2008-01-04  Michael Hutchinson  <mhutchinson@novell.com> 

	* WelcomePageView.cs:
	* WelcomePageFallbackWidget.cs:
	* WelcomePageBrowser.cs: Moved updating into another thread so we don't 
	  block MD's startup. Fix request.IfModifiedSince logic -- the MSDN docs 
	  sample seems to be wrong.

2008-01-04  Steve Y.  <grizlo42@gmail.com>

	* WelcomePageContent.xml: Added new set of links "News Links" for loading
	  online links
	* WelcomePageView.cs: Added function GetUpdatedXmlContent() to download
	  news.xml off server, combine with WelcomePageContent.xml, and return
	  and XmlDocument.
	* WelcomePageFallbackWidget.cs: Added to BuildFromXml () so that the widget
	  includes News links on the Welcome Page by loading them from the XML
	  returned from GetUpdatedXmlContent () or adding "No news has been found"
	  if the news.xml has no updates.
	* WelcomePage.xsl: Added test if no news links are found, display
	  "No news can be found"